[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"
inotify = "^0.2.10"
python-fasthtml = "^0.4.5"
openai = "^1.42.0"
replit = "^4.0.0"
streamlit = "^1.37.1"
twilio = "^9.2.3"
trafilatura = "^1.12.1"
replit-object-storage = "^1.0.2"
flask-caching = "^2.3.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"